RESOLVED FIXED220311
[WASM-References] Added few unreached-invalid tests
https://bugs.webkit.org/show_bug.cgi?id=220311
Summary [WASM-References] Added few unreached-invalid tests
Dmitry
Reported 2021-01-04 23:55:10 PST
[WASM-References] Added few unreached-invalid tests
Attachments
Patch (12.90 KB, patch)
2021-01-05 00:00 PST, Dmitry
no flags
Dmitry
Comment 1 2021-01-05 00:00:04 PST
Yusuke Suzuki
Comment 2 2021-01-05 00:39:27 PST
Comment on attachment 416974 [details] Patch r=me if EWS gets green.
EWS
Comment 3 2021-01-05 02:17:52 PST
Committed r271145: <https://trac.webkit.org/changeset/271145> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416974 [details].
Radar WebKit Bug Importer
Comment 4 2021-01-05 02:18:15 PST
Note You need to log in before you can comment on or make changes to this bug.