[WASM-References] Added few unreached-invalid tests https://bugs.webkit.org/show_bug.cgi?id=220311

Patch by Dmitry Bezhetskov <dbezhetskov@igalia.com> on 2021-01-05
Reviewed by Yusuke Suzuki.

JSTests:

Added unreached-invalid tests and fix error messages in existing tests.

* wasm.yaml:
* wasm/js-api/global-error.js:
* wasm/references-spec-tests/unreached-invalid.wast.js: Added.

Source/JavaScriptCore:

Add semantic checks for parsing unreachable for the following intructions:
local.get/set.tee, global.get/set, br/br_if and call.

* wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseIndexForLocal):
(JSC::Wasm::FunctionParser<Context>::parseIndexForGlobal):
(JSC::Wasm::FunctionParser<Context>::parseFunctionIndex):
(JSC::Wasm::FunctionParser<Context>::parseBranchTarget):
(JSC::Wasm::FunctionParser<Context>::parseExpression):
(JSC::Wasm::FunctionParser<Context>::parseUnreachableExpression):

Canonical link: https://commits.webkit.org/232742@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271145 268f45cc-cd09-0410-ab3c-d52691b4dbfc